# AoC23

./: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  CMakeLists.txt  util.cpp  util.hpp
